# AZtrino

./: AUTHORS  Makefile  Makefile.in  aclocal.m4  config.h  config.h.in  config.sale  config.status  configure  configure.ac  cross-configure.azbox  cross-configure.cool  env.sh  libtool  log
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
data/: Makefile  Makefile.in
data/fonts/: Makefile  Makefile.in
data/icons/: Makefile  Makefile.in
data/iso-codes/: Makefile  Makefile.in
data/lcd/: Makefile  Makefile.in
data/locale/: Makefile  Makefile.in  bosanski.locale  ch-baslerdeutsch.locale  (+17 more)
lib/: Makefile  Makefile.am  Makefile.in
lib/libazbox/: Makefile  Makefile.am  Makefile.in  Makefile.in.off  Makefile.off  audio_cs.cpp  audio_cs.h  cool.cpp  dmx_cs.cpp  dmx_cs.h  dvb-ci.cpp  dvb-ci.h  dvbci_appmgr.cpp  dvbci_appmgr.h  dvbci_camgr.cpp  dvbci_camgr.h  dvbci_datetimemgr.cpp  dvbci_mmi.cpp  dvbci_resmgr.cpp  dvbci_session.cpp  e2mruainclude.h  init_cs.cpp  libcoolstream.la  playback_cs.cpp  playback_cs.cpp.orig  playback_cs.h  playback_cs.h.orig  pwrmngr.cpp  record_cs.cpp  record_cs.h  video_cs.cpp  video_cs.h
lib/libazbox/.deps/: audio_cs.Plo  cool.Plo  dmx_cs.Plo  dvb-ci.Plo  dvbci_appmgr.Plo  dvbci_camgr.Plo  dvbci_datetimemgr.Plo  dvbci_mmi.Plo  dvbci_resmgr.Plo  dvbci_session.Plo  init_cs.Plo  playback_cs.Plo  pwrmngr.Plo  record_cs.Plo  video_cs.Plo
lib/libazbox/azbox/: cs_vfd.h
lib/libazbox/azbox/.svn/: all-wcprops  entries
src/: Makefile  Makefile.am  Makefile.in  neutrino-env.sh  neutrino.cpp  neutrino.h  neutrino_menue.cpp
(+407 files in other folders)
